# P2PTogether

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
client/: main.cpp
client/gui/: app.cpp  app.h  menus.cpp  menus.h  right_panel.cpp  right_panel.h  video_panel.cpp  video_panel.h
client/p2p/: peer.cpp  peer.h
client/player/: mpv_manager.cpp  mpv_manager.h  mpvwidget.cpp  mpvwidget.h  qthelper.hpp
client/roles/: permissions.h  role_store.cpp  role_store.h
client/test/: test_server.cpp  test_server.h
client/transport/: control_stream_worker.cpp  control_stream_worker.h  grpc_client.cpp  grpc_client.h
client/utils/: net.h
docs/: Roadmap.md
peer_service/: go.mod  go.sum  main.go
peer_service/internal/common/: cid.go  time.go
peer_service/internal/encoder/: encoder.go
peer_service/internal/media/: encode_runner.go  encoder.go  encoder_advanced_test.go  hls.go  hls_advanced_test.go  hls_test.go  ingest.go  m3u8_monitor.go  ring_buffer.go  ring_buffer_advanced_test.go  ring_buffer_test.go  status.go
peer_service/internal/p2p/: hub.go  node.go  queue.go  queue_controller.go  rbac_test.go  signaling_test.go
peer_service/internal/roles/: role_manager.go  roles.go
peer_service/internal/session/: session.go  session_manager.go
peer_service/tests/integration/: interop_session_chat_test.py  interop_session_streaming_test.py  interop_session_test.py
peer_service/tools/grpc_driver/: main.go
peer_service/tools/net_scenario/: main.go  verify.py
peer_service/tools/scale_sim/: main.go
peer_service/tools/test_agent/: main.go
peer_service/tools/test_orchestrator/: main.go  scenario.json  scenario_join_session.json  scenario_video_streaming.json  scenario_watch_party.json  scenario_watch_party_small.json
proto/: client.proto
proto/p2p/: analytics.proto  chat.proto  playback.proto  queue.proto  role.proto  session.proto  streaming.proto
src/: main.cpp
src/gui/: app.cpp  app.h  menus.cpp  menus.h  right_panel.cpp  right_panel.h  video_panel.cpp  video_panel.h
src/p2p/: peer.cpp  peer.h
src/player/: mpv_manager.cpp  mpv_manager.h  mpvwidget.cpp  mpvwidget.h  qthelper.hpp
